; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/extr_arp.c_arpsend.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/extr_arp.c_arpsend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iodesc = type { i32 }

@bcea = common dso_local global i32 0, align 4
@ETHERTYPE_ARP = common dso_local global i32 0, align 4
@debug = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iodesc*, i8*, i64)* @arpsend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arpsend(%struct.iodesc* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.iodesc*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.iodesc* %0, %struct.iodesc** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.iodesc*, %struct.iodesc** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i32, i32* @bcea, align 4
  %11 = load i32, i32* @ETHERTYPE_ARP, align 4
  %12 = call i32 @sendether(%struct.iodesc* %7, i8* %8, i64 %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @sendether(%struct.iodesc*, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
